--- a/chart-helm/pet-service/values.yaml
+++ b/chart-helm/pet-service/values.yaml
@@ -2,7 +2,7 @@ gateway:
   enabled: true
   fullnameOverride: api-gateway
   image:
-    repository: tqthuan2504/api-gateway
+    repository: tqthuan2504/gateway-service
     tag: "latest"
   service:
     port: 3000
